//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Requirement {
  id Int [pk, increment]
  name String
  incomeProfile IncomeProfileEnum [not null]
  residenceType ResidenceTypeEnum [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  lifeInsurance Int [not null, default: 0]
  preApprovalFee Int [not null, default: 0]
  processingFee Int [not null, default: 0]
  propertyInsurance Int [not null, default: 0]
  rate Int [not null, default: 0]
  valuationFee Int [not null, default: 0]
  requiredDocuments RequiredDocument [not null]
}

Table RequiredDocument {
  id Int [pk, increment]
  name String
  documentType DocumentTypeEnum [not null]
  isMandatory Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  requirementId Int [not null]
  requirement Requirement [not null]
}

Table Document {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  mortgageId Int
  propertyId Int
  type DocumentTypeEnum [not null]
  url String [unique, not null]
  agentId Int
  Agent Agent
  mortgage Mortgage
  property Property
}

Table Reference {
  id Int [pk, increment]
  title String
  name String [not null]
  email String
  phone String [not null]
  relationship String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  mortgageId Int
  mortgage Mortgage
}

Table Mortgage {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [not null]
  phoneNumber String
  dateOfBirth DateTime [not null]
  intendedProperty String [not null]
  monthlyIncome Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  country String [default: '']
  status MortgageStatusEnum [not null]
  residenceType ResidenceTypeEnum [not null]
  incomeProfile IncomeProfileEnum [not null]
  loanType LoanTypeEnum [not null]
  userId Int
  valueOfProperty Float [not null, default: 0]
  additionalDetail String
  completionStatus CompletionStatusEnum
  customerInformation String
  emirate EmirateEnum
  financeType FinanceTypeEnum
  propertyType PropertyTypeEnum
  familyMembersInUae Int [default: 0]
  favoriteCity String
  homeCountryAddress String
  maritalStatus MaritalStatusEnum
  uaeResidenceAddress String
  yearsInUae Int [default: 0]
  educationType EducationTypeEnum
  annualRentalIncome Int [default: 0]
  deleted Boolean [not null, default: false]
  comments Comment [not null]
  documents Document [not null]
  history History [not null]
  user User
  references Reference [not null]
}

Table History {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  mortgageId Int
  userId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  type HistoryTypeEnum [not null]
  mortgage Mortgage
  user User
}

Table Comment {
  id Int [pk, increment]
  userId Int [not null]
  mortgageId Int [not null]
  message String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  title String [not null]
  user User [not null]
  mortgage Mortgage [not null]
  attachments File [not null]
}

Table User {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role UserRoleEnum [not null, default: 'GENERAL_USER']
  isEmailConfirmed Boolean
  agentId Int
  authId String [unique, not null]
  passwordResetToken String [not null, default: '']
  agent Agent
  comments Comment [not null]
  history History [not null]
  mortgages Mortgage [not null]
  properties Property [not null]
}

Table Location {
  id Int [pk, increment]
  name String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  emirate EmirateEnum [not null]
  properties Property [not null]
  agents Agent [not null]
}

Table Amenity {
  id Int [pk, increment]
  name String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  type AmenityTypeEnum
  propertyId Int
  property Property
}

Table File {
  id Int [pk, increment]
  name String [not null]
  path String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  propertyId Int
  commentId Int
  Comment Comment
  property Property
}

Table Property {
  id Int [pk, increment]
  name String [not null]
  description String
  phone String [not null]
  amount Float
  size Float
  numberOfBedRooms Int
  numberOfBathRooms Int
  maintenanceFee Float
  address String
  landmark String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  minimumContract Float
  deedNumber String
  unitNumber Int
  buildingName String
  floor Int
  isApproved Boolean
  userId Int
  draft String
  paymentInterval String
  numberOfCheques Int
  completionDate DateTime
  numberOfLavatory Int
  rentalAmount Float
  trakheesiPermitNo String [default: '']
  lat Float
  lng Float
  agentId Int
  emirate EmirateEnum
  projectStatus ProjectStatusEnum
  propertyType PropertyTypeEnum
  propertyCategory PropertyCategoryEnum
  holdingType HoldingTypeEnum [default: 'FREE_HOLD']
  propertyFor PropertyForEnum [default: 'SALE']
  occupencyStatus OccupencyStatusEnum
  airportDistance Int
  callPreference String
  image String
  nearbyPlaces String
  otherFeatures String
  parkingSpaces Int
  street String
  submissionStatus SubmissionStatusEnum [default: 'SUBMITTED']
  metroStationDistance Int
  furnishingStatus FurnishingStatusEnum [default: 'UNFURNISHED']
  noticePeriodProperty Int
  noticePeriodRent Int
  email String [not null, default: '']
  locationId Int
  deleted Boolean [not null, default: false]
  completionStatus PropertyCompletionStatusEnum [not null, default: 'OFF_PLAN_PRIMARY']
  layoutType String
  serviceCharges Int
  cityName String
  communityName String
  amenities Amenity [not null]
  documents Document [not null]
  photos File [not null]
  user User
  agent Agent
  location Location
}

Table Agent {
  id Int [pk, increment]
  userId Int [unique, not null]
  agency String
  contactNumber String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  activeStatus ActiveStatusEnum [not null, default: 'ACTIVE']
  approvalStatus ApprovalStatusEnum [not null, default: 'NOT_APPROVED']
  user User [not null]
  documents Document [not null]
  properties Property [not null]
  locations Location [not null]
}

Table Inqueries {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  budget Int [not null]
  website String [not null]
  message String [not null]
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Enum HistoryTypeEnum {
  MORTGAGE
  PROPERTY
  COMMENT
}

Enum SubmissionStatusEnum {
  SUBMITTED
  UNDER_VERIFICATION
  APPROVED
  REJECTED
}

Enum FurnishingStatusEnum {
  FULLY_FURNISHED
  SEMI_FURNISHED
  UNFURNISHED
}

Enum ApprovalStatusEnum {
  APPROVED
  NOT_APPROVED
}

Enum ActiveStatusEnum {
  ACTIVE
  INACTIVE
}

Enum MaritalStatusEnum {
  SINGLE
  MARRIED
  DIVORCED
  WIDOWED
}

Enum EducationTypeEnum {
  ELEMENTARY_SCHOOL
  MIDDLE_SCHOOL
  HIGH_SCHOOL
  COLLEGE
  VOCATIONAL_SCHOOL
  GRADUATE_SCHOOL
  ONLINE_COURSES
  PROFESSIONAL_DEVELOPMENT
  HOMESCHOOLING
  LIFELONG_LEARNING
  SPECIALIZED_TRAINING_PROGRAMS
  LANGUAGE_COURSES
  CERTIFICATE_PROGRAMS
  TRADE_SCHOOLS
}

Enum IncomeProfileEnum {
  SALARIED
  SELF_EMPLOYED
  RENTAL_INCOME
}

Enum ResidenceTypeEnum {
  UAE_NATIONAL
  UAE_RESIDENT
  NON_UAE_RESIDENT
}

Enum DocumentTypeEnum {
  PASSPORT_COPY
  VISA_COPY
  EMIRATES_ID
  BANK_STATEMENT_6_MONTHS
  BANK_STATEMENT_1_YEAR
  SALARY_CERTIFICATE
  TRADE_LICENSE
  MEMORANDUM_WITH_AMENDMENTS
  VAT_CERTIFICATE_RETURN_RECEIPTS
  OFFICE_TENANCY_CONTRACT_UTILITY_BILL
  COMPANY_PROFILE_WEBSITE
  TITLE_DEED_COPY
  TENANCY_CONTRACT_COPY
  RENTAL_CHEQUE_COPY
  BANK_STATEMENT_3_MONTHS_EQUIVALENT_AED_25000
  PROOF_OF_RESIDENCE
  PROOF_OF_INCOME
  COMPANY_BANK_STATEMENT_6_MONTHS
  OWNERSHIP_PROOF_MOBILE_NUMBER
  MOBILE_BILL_COPY
  REAL_ESTATE_LICENSE
}

Enum AmenityTypeEnum {
  PROPERTY
  BUILDING
  COMMUNITY
}

Enum HoldingTypeEnum {
  FREE_HOLD
  LEASE_HOLD
}

Enum PropertyCompletionStatusEnum {
  READY_SECONDARY
  OFF_PLAN_SECONDARY
  READY_PRIMARY
  OFF_PLAN_PRIMARY
}

Enum UserRoleEnum {
  SUPER_ADMIN
  ADMIN
  GENERAL_USER
  AGENT
}

Enum CompletionStatusEnum {
  COMPLETED
  UNDER_CONSTRUCTION
}

Enum FinanceTypeEnum {
  ISLAMIC
  CONVENTIONAL
}

Enum MortgageStatusEnum {
  SUBMITTED
  UNDER_DOCUMENTATION_STAGE
  SUBMITTED_TO_BANK
  APPROVED
  VALUATION_STAGE
  FINAL_OFFER_LETTER
  CASE_DISBURSED
  PROPERTY_TRANSFER
  TRANSACTION_COMPLETED
  CASE_CLOSED
  CASE_DECLINED
}

Enum LoanTypeEnum {
  BUY_PROPERTY_FROM_SELLER
  BUY_PROPERTY_FROM_DEVELOPER
  SHIFT_PROPERTY_LOAN
  GET_CASH_AGAINST_EXISTING_PROPERTY
}

Enum PropertyForEnum {
  SALE
  RENT
}

Enum ProjectStatusEnum {
  OFF_PLAN_UNDER_CONSTRUCTION
  SHELL_AND_CORE
  COMPLETED
}

Enum OccupencyStatusEnum {
  VACANT
  OCCUPIED
}

Enum PropertyTypeEnum {
  RESIDENTIAL
  COMMERCIAL
}

Enum PropertyCategoryEnum {
  APARTMENT_AND_UNIT
  APARTMENT
  VILLA
  DUPLEX
  PENTHOUSE
  ACREAGE
  RESIDENTIAL_LAND
  VILLA_COMPOUND
  BLOCK_OF_UNITS
  RESIDENTIAL_FULL_BUILDING
  BUNGALOW
  BULK_UNITS
  HOUSE
  TOWNHOUSE
  LAND
  BULK_UNIT
  COMMERCIAL_BUILDING
  COMMERCIAL_FLOOR
  COMMERCIAL_VILLA
  COMMERCIAL_PLOT
  FACTORY
  INDUSTRIAL_UNIT_FOR_SALE
  INDUSTRIAL_LAND
  MIXED_USED_SAND
  OFFICE_FOR_SALE
  RETAIL_FOR_SALE
  SHOP
  STAFF_ACCOMMODATION_FOR_SALE
  WAREHOUSE
  SELL_COMMERCIAL_LAND
  OTHER
}

Enum EmirateEnum {
  DUBAI
  ABU_DHABI
  RAS_AL_KHAIMAH
  SHARJAH
  FUJAIRAH
  AJMAN
  UMM_AL_QUWAIN
}

Ref: RequiredDocument.requirementId > Requirement.id [delete: Cascade]

Ref: Document.agentId > Agent.id

Ref: Document.mortgageId > Mortgage.id

Ref: Document.propertyId > Property.id

Ref: Reference.mortgageId > Mortgage.id

Ref: Mortgage.userId > User.id [delete: Cascade]

Ref: History.mortgageId > Mortgage.id

Ref: History.userId > User.id

Ref: Comment.userId > User.id

Ref: Comment.mortgageId > Mortgage.id [delete: Cascade]

Ref: Amenity.propertyId > Property.id

Ref: File.commentId > Comment.id

Ref: File.propertyId > Property.id

Ref: Property.userId > User.id [delete: Cascade]

Ref: Property.agentId > Agent.id

Ref: Property.locationId > Location.id

Ref: Agent.userId - User.id